--- a/src/TableFlex/Table.module.scss
+++ b/src/TableFlex/Table.module.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   border: solid 1px #000;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 // ROW
@@ -31,12 +33,9 @@
   padding: 5px;
   overflow: hidden;
   text-overflow: ellipsis;
-
-  div {
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-  }
+  box-sizing: border-box;
+  flex-shrink: 0;
+  cursor: pointer;
 
   input {
     width: -webkit-fill-available;
@@ -48,4 +47,5 @@
 
 .cellHeader.lastHeaderCell, .cell.lastCell {
   border-right: none;
+  min-width: inherit;
 }
